Sun Jun 06 15:07:55 GMT 2010  Olly Betts <olly@survex.com>

	* HACKING,configure.ac: Upgrade to using libtool 2.2.8.

Sun Jun 06 04:34:13 GMT 2010  Olly Betts <olly@survex.com>

	* bin/Makefile.mk,configure.ac: Fix build failures with some
	  combinations of backends disabled (partially addresses ticket#361).

Sat Jun 05 16:30:57 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/remotesubmatch.cc: Add missing parameter of
	  RemoteSubMatch::start_match() to debug logging.

Sat Jun 05 15:03:56 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/queryoptimiser.h: Make QueryOptimiser::optimise_query()'s
	  argument const pointer, since we only pass it to do_subquery() which
	  takes a const pointer.

Fri Jun 04 16:05:01 GMT 2010  Olly Betts <olly@survex.com>

	* common/rset.h: Just keep a reference to the set<docid> from the
	  Xapian::RSet object rather than copying it (since we now only
	  create the RSetI object transiently, so the Xapian::RSet object
	  is definitely valid for its whole lifetime).

Fri Jun 04 15:57:50 GMT 2010  Olly Betts <olly@survex.com>

	* api/omenquire.cc,matcher/localmatch.cc,matcher/localmatch.h: Keep
	  a Xapian::RSet handle in the LocalSubMatch object and only create
	  an RSetI object briefly in LocalSubMatch::prepare_match().

Fri Jun 04 15:36:45 GMT 2010  Olly Betts <olly@survex.com>

	* common/pretty.h: RSetI objects are no longer passed as parameters
	  or return values, so we no longer need to handle them.

Fri Jun 04 15:28:21 GMT 2010  Olly Betts <olly@survex.com>

	* api/omenquire.cc,common/esetinternal.h,common/omenquireinternal.h,
	  common/rset.h,expand/esetinternal.cc,matcher/rset.cc: RSetI is used
	  when collating statistics prior to performing the match, and when
	  generating an ESet.  The second use is entirely unnecessary and just
	  ends up with us copying the std::set<Xapian::docid> from inside the
	  Xapian::RSet object, so eliminate it and just use the Xapian::RSet